# mergecheck

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibgit2.cmake
include/mergecheck/: conflict.hpp  merge.hpp  rebase.hpp  remote.hpp  string_utils.hpp  utils.hpp
src/: CMakeLists.txt  conflict.cpp  merge.cpp  mergecheck.cpp  rebase.cpp  remote.cpp  string_utils.cpp  utils.cpp
